@@ -17,6 +17,7 @@ Changelog
  * Fix: Fixed typo in Wistia oEmbed pattern (Josh Hurd)
  * Fix: Added more accurate help text for the Administrator flag on user accounts (Matt Fozard)
  * Fix: Tags added on the multiple image uploader are now saved correctly
+ * Fix: Documents created by a user are no longer deleted when the user is deleted
 
 1.3.1 (05.01.2016)
 ~~~~~~~~~~~~~~~~~~
